# data-structure

./: CMakeLists.txt  README.md  main.c
C/: CMakeLists.txt  main.c
C/src/binary_tree/: binary_tree.c  binary_tree.h
C/src/interface/: node_box.c
C/src/linked_list/: doubly_linked_list.c
C/src/queues/: circular_queue.c  circular_queue.h  simple_queue.c
C/src/stack/: stack.c
C/src/vectors/: unordered_vector_interface.h  unordered_vectors.c  unordered_vectors.h
Java/: Main.java
Java/stack/: ArrayStack.java
__test__/: test.c
linked list/: main  main.c
python/: binarytree.py  linkedlist.py  main.py  stack.py  vectors.py
queues/: fifo.queues.dynamic.c  fifo.queues.dynamic.generic.c  queue.classic.py  simple.queue.py
src/binary_tree/: binary_tree.c  binary_tree.h
src/interface/: node_box.h
src/linked_list/: doubly.linked.list.c  doubly.linked.list.h  doubly_linked_list.c  doubly_linked_list.h
src/queues/: simple.queue.c  simple.queue.h
src/stack/: stack.c  stack.h
stack/: lifo.stack.dynamic  lifo.stack.dynamic.c  lifo.stack.dynamic.generic  lifo.stack.dynamic.generic.c  lifo.stack.static.c  main
